# mail-parser

./: .gitignore  Cargo.toml  README.md  package.json
bindings/: Group.ts  Header.ts  HeaderName.ts  HeaderValue.ts  Message.ts  Received.ts  RfcHeader.ts  index.ts
mail-parser-ts/: mail-parser-ts-bindings-0.9.1.tgz  package.json
mail-parser-ts/bindings/: Addr.ts  Address.ts  ContentType.ts  DateTime.ts  Greeting.ts  Group.ts  Host.ts  MessagePart.ts  PartType.ts  Protocol.ts  Received.ts  TlsVersion.ts
mail-parser-wasm/: README.md  mail-parser-wasm-bindings-0.9.1.tgz  package.json  patch-declarations.js
src/: lib.rs
