[package]
name = "mail-parser"
description = "Fast and robust e-mail parsing library for Rust"
version = "0.9.1"
edition = "2021"
authors = [ "Stalwart Labs <hello@stalw.art>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stalwartlabs/mail-parser"
homepage = "https://github.com/stalwartlabs/mail-parser"
keywords = ["email", "mail", "parser", "parse", "mime"]
categories = ["email", "parser-implementations"]
readme = "README.md"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
encoding_rs = { version="0.8", optional=true }
serde = { version = "1.0", features = ["derive"], optional=true }
ts-rs = { version = "10.1", features = ["serde-compat", "serde-json-impl", "chrono-impl"] }
wasm-bindgen = "0.2.100"
serde_json = "1.0"
serde-wasm-bindgen = "0.2"
js-sys = "0.3.77"

[dev-dependencies]
mail-parser = { path = ".", features = ["serde_support", "full_encoding"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
chrono = "0.4"

[features]
default = ["full_encoding"]
full_encoding = ["encoding_rs"]
serde_support = ["serde"]
ludicrous_mode = []
ts-bindings = []

[profile.bench]
debug = true
